--- a/index.html
+++ b/index.html
@@ -2180,7 +2180,10 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				// Scroll the categories section back to the beginning
 				const categoriesContainer = document.querySelector('.mobile-categories');
 				if (categoriesContainer) {
-					categoriesContainer.scrollLeft = 0;
+					categoriesContainer.scrollTo({
+						left: 0,
+						behavior: 'smooth'
+					});
 				}
 
 				// Show all games
