--- a/index.html
+++ b/index.html
@@ -1528,6 +1528,26 @@
 
 		// Game collection data with placeholder SVG icons and categories
 		const games = {
+			circlesAndSquares: {
+				title: 'Circles & Squares',
+				path: '/games/circles-and-squares/',
+				description: 'Fast-paced physics action game where you tap bouncing circles for points while avoiding penalty squares.',
+				short_description: 'Tap the circles, avoid the squares',
+				category: 'arcade',
+				icon: `<svg width="1000" height="1000" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
+  <!-- Large square centered in viewport -->
+  <rect x="200" y="200" width="600" height="600"
+        stroke="white" stroke-width="40"
+        fill="none" stroke-linecap="round" stroke-linejoin="round" />
+
+  <!-- Large circle in top-left, overlapping square -->
+  <circle cx="300" cy="300" r="280"
+          stroke="white" stroke-width="40"
+          fill="none" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
+`,
+				mobileOnly: false
+			},
 			nerdle: {
 				title: 'Nerdle',
 				path: '/games/nerdle/',
