--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@
 				path: '/games/circles-and-squares/',
 				description: 'Fast-paced physics action game where you tap bouncing circles for points while avoiding penalty squares.',
 				short_description: 'Tap the circles, avoid the squares',
-				category: 'arcade',
+				category: 'casual',
 				icon: `<svg width="1000" height="1000" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
   <!-- Large square centered in viewport -->
   <rect x="200" y="200" width="600" height="600"
