--- a/index.html
+++ b/index.html
@@ -1528,6 +1528,46 @@
 
 		// Game collection data with placeholder SVG icons and categories
 		const games = {
+			fruitSlice: {
+				title: 'Fruit Slice',
+				path: '/games/fruit-slice/',
+				description: 'Addictive fruit slicing game where you swipe to cut flying fruits for points while avoiding dangerous bombs.',
+				short_description: 'Slice the fruits, avoid the bombs',
+				category: 'arcade',
+				icon: `<svg width="1000" height="1000" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
+  <!-- Apple fruit -->
+  <circle cx="350" cy="450" r="180"
+          fill="none" stroke="white" stroke-width="40"
+          stroke-linecap="round" stroke-linejoin="round" />
+  
+  <!-- Apple stem -->
+  <path d="M350 270 L350 220"
+        stroke="white" stroke-width="25"
+        stroke-linecap="round" />
+  
+  <!-- Apple leaf -->
+  <path d="M370 240 Q420 220 400 280"
+        stroke="white" stroke-width="20"
+        fill="none" stroke-linecap="round" />
+  
+  <!-- Orange fruit -->
+  <circle cx="650" cy="350" r="140"
+          fill="none" stroke="white" stroke-width="35"
+          stroke-linecap="round" stroke-linejoin="round" />
+  
+  <!-- Slice line cutting through both fruits -->
+  <path d="M150 200 L850 800"
+        stroke="white" stroke-width="45"
+        stroke-linecap="round" />
+  
+  <!-- Small slice sparkles -->
+  <circle cx="400" cy="350" r="15" fill="white" />
+  <circle cx="580" cy="520" r="12" fill="white" />
+  <circle cx="320" cy="280" r="10" fill="white" />
+</svg>
+`,
+				mobileOnly: false
+			},
 			circlesAndSquares: {
 				title: 'Circles & Squares',
 				path: '/games/circles-and-squares/',
