--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
 			<div class="mobile-categories">
 				<div class="mobile-category active">All</div>
 				<div class="mobile-category">Puzzle</div>
-				<div class="mobile-category">Arcade</div>
+				<div class="mobile-category">Action</div>
 				<div class="mobile-category">Classic</div>
 				<div class="mobile-category">Casual</div>
 			</div>
@@ -1562,7 +1562,7 @@
 				path: '/games/deep-sea-escape/',
 				description: 'Guide your fish through underwater coral reefs in this aquatic adventure.',
 				short_description: 'Underwater fish adventure.',
-				category: 'arcade',
+				category: 'action',
 				icon: `<?xml version="1.0" ?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
 <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 15C3.83333 12.3333 8.8 7 14 7C14.9226 7 15.7539 7.10492 16.5 7.28685M2 9C3.83333 11.6667 8.8 17 14 17C14.9226 17 15.7539 16.8951 16.5 16.7132M16.5 16.7132C19.9595 15.8697 22 12 22 12C22 12 19.9595 8.13032 16.5 7.28685M16.5 16.7132C15.5 15.1667 14.1 11.1163 16.5 7.28685M12 10.5C11.5 11 10.8 12.3 12 13.5" stroke="#FFFFFF" stroke-linecap="round" stroke-width="2"/><path d="M18 11H18.001" stroke="#FFFFFF" stroke-linecap="round" stroke-width="2"/></svg>`,
 				mobileOnly: false
@@ -1952,7 +1952,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				path: '/games/space-shooter/',
 				description: 'Pilot your spaceship and navigate through an asteroid field. Shoot or evade asteroids.',
 				short_description: 'Pilot spaceship through asteroids.',
-				category: 'arcade',
+				category: 'action',
 				icon: `<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" fill="#fff" viewBox="12.368 -0.374 76.099 100" enable-background="new 12.368 -0.374 76.099 100" xml:space="preserve"><g><g><path d="M84.868,64.865c-2.589-2.306-5.567-4.338-8.929-6.021c-1.694-0.85-2.195-1.688-2.01-3.161
 			c1.118-8.796,1.176-17.582-1.221-26.303c-2.966-10.8-9.554-20.312-20.385-29.145c-1.02-0.805-2.88-0.917-4.388,0.305
 			c-4.874,3.951-9.039,8.254-12.42,12.946c-6.002,8.335-8.925,17.25-9.672,26.572c-0.481,5.974-0.067,11.931,0.677,17.882
@@ -1986,7 +1986,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				path: '/games/space-shooter-2/',
 				description: 'Pilot your upgraded spaceship through dense asteroid fields with enhanced graphics.',
 				short_description: 'Enhanced spaceship asteroid action.',
-				category: 'arcade',
+				category: 'action',
 				icon: `<svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
   <g>
     <g>
@@ -2007,9 +2007,9 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 			flappingBird: {
 				title: 'Flapping Bird',
 				path: '/games/flapping-bird/',
-				description: 'Flapping Bird is a simple arcade game where you tap to keep a bird in the air.',
+				description: 'Flapping Bird is a simple action game where you tap to keep a bird in the air.',
 				short_description: 'Tap to keep bird flying.',
-				category: 'arcade',
+				category: 'action',
 				icon: `<svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
   <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
   <g transform="matrix(0.99 0 0 0.99 12 12)">
