--- a/games/fruit-slice/index.html
+++ b/games/fruit-slice/index.html
@@ -113,13 +113,13 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
 
-
         .instructions-list {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             margin: 0 auto 30px auto;
-            width: fit-content;
+            width: 280px;
+            max-width: 90%;
         }
 
         .instructions-list p {
