--- a/games/fruit-slice/index.html
+++ b/games/fruit-slice/index.html
@@ -114,12 +114,7 @@
         }
 
         .instructions-list {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            margin: 0 auto 30px auto;
-            width: 280px;
-            max-width: 90%;
+            margin-bottom: 30px;
         }
 
         .instructions-list p {
@@ -127,7 +122,6 @@
             margin: 15px 0;
             text-align: left;
             color: #ffffff;
-            white-space: nowrap;
         }
 
         .instructions-list strong {
@@ -163,7 +157,6 @@
             text-align: center;
             display: none;
             z-index: 20;
-            max-width: 350px;
             width: 90%;
         }
 
