--- a/games/fruit-slice/index.html
+++ b/games/fruit-slice/index.html
@@ -103,6 +103,8 @@
             text-align: center;
             z-index: 30;
             width: 90%;
+            display: flex;
+            flex-direction: column;
         }
 
         #startScreen h1 {
@@ -114,6 +116,7 @@
 
         .instructions-list {
             margin-bottom: 30px;
+            align-self: anchor-center;
         }
 
         .instructions-list p {
