--- a/index.html
+++ b/index.html
@@ -1528,6 +1528,24 @@
 
 		// Game collection data with placeholder SVG icons and categories
 		const games = {
+			orbAttack: {
+				title: 'Orb Attack',
+				path: '/games/orb-attack/',
+				description: 'Fast-paced survival game where you swipe to dodge attacking red and orange orbs.',
+				short_description: 'Dodge the attacking orbs!',
+				category: 'action',
+				icon: `<svg width="1000" height="1000" viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="500" cy="500" r="150" fill="white" stroke="white" stroke-width="10"/>
+  <line x1="500" y1="500" x2="850" y2="150" stroke="white" stroke-width="20"/>
+  <line x1="500" y1="500" x2="150" y2="300" stroke="white" stroke-width="20"/>
+  <line x1="500" y1="500" x2="750" y2="850" stroke="white" stroke-width="20"/>
+  <circle cx="850" cy="150" r="60" fill="white" stroke="white" stroke-width="10"/>
+  <circle cx="150" cy="300" r="60" fill="white" stroke="white" stroke-width="10"/>
+  <circle cx="750" cy="850" r="60" fill="white" stroke="white" stroke-width="10"/>
+</svg>
+`,
+				mobileOnly: true
+			},
 			fruitSlice: {
 				title: 'Fruit Slice',
 				path: '/games/fruit-slice/',
@@ -1571,7 +1589,7 @@
 				title: 'Nerdle',
 				path: '/games/nerdle/',
 				description: 'A nerdy twist on the famous word game. Guess the hidden "nerdy" word in 6 tries.',
-				short_description: 'Nerdy word game. Guess the hidden word.',
+				short_description: 'A fun Nerdy word game.',
 				category: 'puzzle',
 				icon: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
 			  <path fill="white" d="M32 2C15.432 2 2 15.432 2 32s13.432 30 30 30 30-13.432 30-30S48.568 2 32 2m18.103 9.324c-2.818-1.123-5.925-1.463-8.979-.915-.703.135-.192 2.27.388 2.156 4.168-.748 8.456.4 11.69 3.133.163.142.469.015.765-.222 1.734 2.3 3.11 4.881 4.06 7.66C55.73 19.456 51.657 17 47 17c-4.533 0-8.521 2.323-10.848 5.842-2.688-1.168-5.805-1.061-8.301.007C25.525 19.326 21.537 17 17 17c-4.657 0-8.73 2.457-11.026 6.137.962-2.818 2.367-5.433 4.136-7.758.27.197.538.299.686.169 3.237-2.732 7.524-3.881 11.692-3.133.58.113 1.092-2.021.389-2.156-2.944-.528-5.936-.228-8.672.8C19.006 6.973 25.218 4.5 32 4.5c6.928 0 13.262 2.581 18.103 6.824M57 30c0 5.521-4.479 10-10 10s-10-4.479-10-10c0-5.524 4.479-10 10-10s10 4.476 10 10m-29.999 0c0 5.523-4.479 10-10.001 10-5.522 0-10-4.477-10-10 0-5.524 4.477-10 10-10s10.001 4.476 10.001 10M32 59.5c-14.563 0-26.511-11.379-27.436-25.712C6.187 39.119 11.139 43 17 43c7.18 0 13-5.82 13-13 0-1.276-.191-2.506-.534-3.671 1.53-.436 3.54-.434 5.068.001C34.191 27.494 34 28.725 34 30c0 7.18 5.82 13 13 13 5.861 0 10.813-3.881 12.436-9.212C58.511 48.121 46.563 59.5 32 59.5"/>
