--- a/index.html
+++ b/index.html
@@ -2319,6 +2319,21 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 			});
 		}
 	</script>
+
+	<!-- Default Statcounter code for AI Game Collection https://aigamecollection.com/ -->
+	<script type="text/javascript">
+		var sc_project = 13147129;
+		var sc_invisible = 1;
+		var sc_security = "2d3d9121"; 
+	</script>
+	<script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+	<noscript>
+		<div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/" target="_blank"><img class="statcounter"
+					src="https://c.statcounter.com/13147129/0/2d3d9121/1/" alt="Web Analytics Made Easy - Statcounter"
+					referrerPolicy="no-referrer-when-downgrade"></a></div>
+	</noscript>
+	<!-- End of Statcounter Code -->
 </body>
 
 </html>
