trying new styles

--- a/index.html
+++ b/index.html
@@ -770,6 +770,10 @@
 		/* Desktop layout remains exactly the same - this is hidden on mobile */
 		@media (max-width: 768px) {
 
+			h1::after {
+				background: none;
+			}
+
 			/* Hide desktop layout completely on mobile */
 			.container {
 				display: none;
