--- a/index.html
+++ b/index.html
@@ -1745,6 +1745,15 @@
 
 		// Game collection data with placeholder SVG icons and categories
 		const games = {
+			fourInARow: {
+				title: '4 in a Row',
+				path: '/games/four-in-a-row/',
+				description: 'Classic strategy game where you drop colored pieces to connect four in a row. Play against a friend or challenge the AI opponent with multiple difficulty levels.',
+				short_description: 'Connect four pieces to win',
+				category: 'strategy',
+				icon: `<svg fill="#fff" height="200px" width="200px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><rect x="40" y="80" width="432" height="352" rx="24" ry="24" fill="none" stroke="#fff" stroke-width="32"/><circle cx="128" cy="160" r="32" fill="#ff4757"/><circle cx="224" cy="160" r="32" fill="#ffa502"/><circle cx="320" cy="160" r="32" fill="#ff4757"/><circle cx="416" cy="160" r="32" fill="none" stroke="#fff" stroke-width="4"/><circle cx="128" cy="240" r="32" fill="#ffa502"/><circle cx="224" cy="240" r="32" fill="#ff4757"/><circle cx="320" cy="240" r="32" fill="#ffa502"/><circle cx="416" cy="240" r="32" fill="#ff4757"/><circle cx="128" cy="320" r="32" fill="#ff4757"/><circle cx="224" cy="320" r="32" fill="#ffa502"/><circle cx="320" cy="320" r="32" fill="none" stroke="#fff" stroke-width="4"/><circle cx="416" cy="320" r="32" fill="#ffa502"/><circle cx="128" cy="400" r="32" fill="none" stroke="#fff" stroke-width="4"/><circle cx="224" cy="400" r="32" fill="#ff4757"/><circle cx="320" cy="400" r="32" fill="#ff4757"/><circle cx="416" cy="400" r="32" fill="#ff4757"/></g></svg>`,
+				mobileOnly: false
+			},
 			orbAttack: {
 				title: 'Orb Attack',
 				path: '/games/orb-attack/',
