--- a/games/four-in-a-row/index.html
+++ b/games/four-in-a-row/index.html
@@ -144,18 +144,21 @@
             overflow: hidden;
         }
 
-        .cell:hover {
-            transform: scale(1.05);
-            border-color: rgba(255, 255, 255, 0.3);
-        }
-
         .cell.filled {
             cursor: default;
         }
 
-        .cell.filled:hover {
-            transform: none;
-            border-color: transparent;
+        /* Desktop hover effects only */
+        @media (hover: hover) {
+            .cell:hover {
+                transform: scale(1.05);
+                border-color: rgba(255, 255, 255, 0.3);
+            }
+
+            .cell.filled:hover {
+                transform: none;
+                border-color: transparent;
+            }
         }
 
         .piece {
@@ -205,14 +208,6 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
-        .column-indicator:hover {
-            background: rgba(255, 255, 255, 0.25);
-            opacity: 1;
-            transform: translateY(-3px);
-            border-color: rgba(255, 255, 255, 0.4);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
         .column-indicator.full {
             background: rgba(255, 71, 87, 0.3);
             border-color: rgba(255, 71, 87, 0.5);
@@ -220,10 +215,21 @@
             opacity: 0.6;
         }
 
-        .column-indicator.full:hover {
-            background: rgba(255, 71, 87, 0.3);
-            transform: none;
-            opacity: 0.6;
+        /* Desktop hover effects only */
+        @media (hover: hover) {
+            .column-indicator:hover {
+                background: rgba(255, 255, 255, 0.25);
+                opacity: 1;
+                transform: translateY(-3px);
+                border-color: rgba(255, 255, 255, 0.4);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+
+            .column-indicator.full:hover {
+                background: rgba(255, 71, 87, 0.3);
+                transform: none;
+                opacity: 0.6;
+            }
         }
 
         .controls {
@@ -250,12 +256,6 @@
             border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
-        .btn:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-
         .btn:active {
             transform: translateY(0);
         }
@@ -264,6 +264,15 @@
             visibility: hidden;
             opacity: 0;
             pointer-events: none;
+        }
+
+        /* Desktop hover effects only */
+        @media (hover: hover) {
+            .btn:hover {
+                background: rgba(255, 255, 255, 0.3);
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            }
         }
 
 
@@ -423,24 +432,27 @@
             border-color: rgba(255, 255, 255, 0.3);
         }
 
-        .modal-btn.confirm:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(255, 71, 87, 0.4);
-        }
-
         .modal-btn.cancel {
             background: rgba(255, 255, 255, 0.2);
             color: white;
             border-color: rgba(255, 255, 255, 0.4);
         }
 
-        .modal-btn.cancel:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-        }
-
         .modal-btn:active {
             transform: translateY(0);
+        }
+
+        /* Desktop hover effects only */
+        @media (hover: hover) {
+            .modal-btn.confirm:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(255, 71, 87, 0.4);
+            }
+
+            .modal-btn.cancel:hover {
+                background: rgba(255, 255, 255, 0.3);
+                transform: translateY(-2px);
+            }
         }
 
         /* Game Result Modal Styling */
