--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@
 
 			<!-- Games Grid -->
 			<div class="mobile-section-title" id="allGamesSection">
-				All Games
+				Games
 				<span class="mobile-see-all">View All</span>
 			</div>
 
