updated site text

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,8 @@
 			<h1>AI Game Collection</h1>
 			<p class="subtitle">This site and all games were built using AI with minimal code changes.</p>
 
-			<p class="subtitle" id="mobileOptimizedText">All games are optimized for mobile. For the best experience
+			<p class="subtitle" id="mobileOptimizedText">All games are optimized for mobile. For the best experience and
+				even more games
 				visit this site on your mobile device or install the Android app.</p>
 			<!-- Add Google Play button container -->
 			<div class="google-play-container" id="googlePlayButton">
