--- a/games/block-drop/index.html
+++ b/games/block-drop/index.html
@@ -43,6 +43,8 @@
             display: flex;
             flex-direction: column;
             position: relative;
+            margin-top: 7px;
+            margin-bottom: 7px;
         }
 
         #gameCanvas {
@@ -62,6 +64,8 @@
             background: rgba(0, 0, 0, 0.3);
             border-radius: 12px;
             backdrop-filter: blur(10px);
+            margin-top: 7px;
+            margin-bottom: 7px;
         }
 
         #gameInfo {
