--- a/games/block-drop/index.html
+++ b/games/block-drop/index.html
@@ -241,13 +241,14 @@
             padding: 20px 40px;
             font-size: 20px;
             background: linear-gradient(45deg, #2ed573, #26d465);
-            color: white;
+            color: #1a1a1a;
             border: none;
             border-radius: 50px;
             cursor: pointer;
             transition: all 0.3s;
             box-shadow: 0 10px 30px rgba(46, 213, 115, 0.3);
             font-weight: bold;
+            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
         }
 
         #startBtn:hover {
@@ -340,7 +341,7 @@
             padding: 15px 30px;
             font-size: 18px;
             background: linear-gradient(45deg, #2ed573, #26d465);
-            color: white;
+            color: #1a1a1a;
             border: none;
             border-radius: 25px;
             cursor: pointer;
@@ -348,6 +349,7 @@
             box-shadow: 0 10px 30px rgba(46, 213, 115, 0.3);
             font-weight: bold;
             margin-top: 20px;
+            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
         }
 
         #restartBtn:hover {
@@ -372,6 +374,31 @@
             border: 1px solid #444;
             background: #000;
             border-radius: 4px;
+        }
+
+        /* Combo indicator styles */
+        .combo-indicator {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: linear-gradient(135deg, #ff6b6b, #feca57);
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-weight: bold;
+            font-size: 18px;
+            transform: scale(0);
+            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            z-index: 50;
+            box-shadow: 0 4px 15px rgba(255, 107, 107, 0.4);
+        }
+
+        .combo-indicator.show {
+            transform: scale(1);
+        }
+
+        .combo-indicator.hide {
+            transform: scale(0);
         }
 
         @media (max-width: 480px) {
@@ -458,10 +485,19 @@
                 padding: 16px 36px;
                 font-size: 14px;
                 letter-spacing: 1px;
+                color: #1a1a1a;
+                text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
             }
 
             #pauseOverlay .pause-text {
                 font-size: 20px;
+            }
+
+            .combo-indicator {
+                font-size: 14px;
+                padding: 6px 12px;
+                top: 5px;
+                right: 5px;
             }
         }
 
@@ -488,6 +524,8 @@
             #startBtn {
                 padding: 14px 32px;
                 font-size: 15px;
+                color: #1a1a1a;
+                text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
             }
 
             .game-over-modal {
@@ -556,6 +594,10 @@
                 <div class="instruction-icon">📏</div>
                 <div>Complete lines to score</div>
             </div>
+            <div class="instruction-item">
+                <div class="instruction-icon">⚡</div>
+                <div>Blocks fall into gaps!</div>
+            </div>
         </div>
 
         <button id="startBtn">START GAME</button>
@@ -567,6 +609,7 @@
             <div id="pauseOverlay">
                 <div class="pause-text">PAUSED</div>
             </div>
+            <div class="combo-indicator" id="comboIndicator">COMBO x2!</div>
         </div>
 
         <div id="sidePanel">
@@ -582,6 +625,10 @@
                 <div class="stat-item">
                     <div class="stat-label">LINES</div>
                     <div class="stat-value" id="lines">0</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-label">COMBO</div>
+                    <div class="stat-value" id="combo">0</div>
                 </div>
             </div>
 
@@ -617,6 +664,10 @@
                     <div class="final-stat-label">LINES</div>
                     <div class="final-stat-value" id="finalLines">0</div>
                 </div>
+                <div class="final-stat">
+                    <div class="final-stat-label">MAX COMBO</div>
+                    <div class="final-stat-value" id="finalCombo">0</div>
+                </div>
             </div>
             <button id="restartBtn">PLAY AGAIN</button>
         </div>
@@ -627,7 +678,6 @@
         style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(15, 15, 35, 0.95); z-index: 2000; justify-content: center; align-items: center;">
         <div
             style="background: linear-gradient(145deg, #1a1a2e 0%, #16213e 100%); padding: 30px; border-radius: 20px; text-align: center; max-width: 350px; margin: 20px;">
-            <div style="font-size: 2.5em; margin-bottom: 15px;">🔄</div>
             <h3 style="margin: 0 0 10px 0; color: white; font-size: 1.4em;">Restart Game?</h3>
             <p style="margin: 0 0 25px 0; color: rgba(255,255,255,0.7); font-size: 14px;">Your current progress will be
                 lost.</p>
@@ -690,6 +740,8 @@
                 this.score = 0;
                 this.level = 1;
                 this.lines = 0;
+                this.combo = 0;
+                this.maxCombo = 0;
                 this.dropTime = 0;
                 this.dropInterval = 1000;
 
@@ -809,22 +861,97 @@
                 }
 
                 this.gameState = 'clearing';
-                await this.clearLinesWithAnimation();
+                await this.clearLinesWithGravity();
                 this.gameState = 'playing';
             }
 
-            async clearLinesWithAnimation() {
-                const completedLines = [];
+            // New gravity system that applies to all blocks
+            applyGravity() {
+                let changed = false;
 
-                // Find all completed lines
-                for (let y = this.rows - 1; y >= 0; y--) {
-                    if (this.board[y].every(cell => cell !== 0)) {
-                        completedLines.push(y);
+                // Work from bottom to top
+                for (let y = this.rows - 2; y >= 0; y--) {
+                    for (let x = 0; x < this.cols; x++) {
+                        if (this.board[y][x] !== 0) {
+                            // Find how far this block can fall
+                            let fallDistance = 0;
+                            for (let checkY = y + 1; checkY < this.rows; checkY++) {
+                                if (this.board[checkY][x] === 0) {
+                                    fallDistance++;
+                                } else {
+                                    break;
+                                }
+                            }
+
+                            // Move the block down if it can fall
+                            if (fallDistance > 0) {
+                                this.board[y + fallDistance][x] = this.board[y][x];
+                                this.board[y][x] = 0;
+                                changed = true;
+                            }
+                        }
                     }
                 }
 
-                if (completedLines.length > 0) {
-                    // Flash animation for completed lines
+                return changed;
+            }
+
+            // Animate gravity with visual falling effect
+            async animateGravity() {
+                return new Promise(resolve => {
+                    const animationSteps = 8;
+                    let currentStep = 0;
+
+                    // Store original board state
+                    const originalBoard = this.board.map(row => [...row]);
+
+                    // Apply gravity to get final state
+                    this.applyGravity();
+                    const finalBoard = this.board.map(row => [...row]);
+
+                    // Restore original state for animation
+                    this.board = originalBoard;
+
+                    const animate = () => {
+                        if (currentStep >= animationSteps) {
+                            this.board = finalBoard;
+                            resolve();
+                            return;
+                        }
+
+                        // Gradually apply gravity
+                        if (currentStep % 2 === 0) {
+                            this.applyGravity();
+                        }
+
+                        this.draw();
+                        currentStep++;
+                        setTimeout(animate, 50);
+                    };
+
+                    animate();
+                });
+            }
+
+            async clearLinesWithGravity() {
+                let totalLinesCleared = 0;
+                let comboCount = 0;
+
+                while (true) {
+                    const completedLines = [];
+
+                    // Find all completed lines
+                    for (let y = this.rows - 1; y >= 0; y--) {
+                        if (this.board[y].every(cell => cell !== 0)) {
+                            completedLines.push(y);
+                        }
+                    }
+
+                    if (completedLines.length === 0) {
+                        break; // No more lines to clear
+                    }
+
+                    // Animate line clearing
                     await this.animateLineClearing(completedLines);
 
                     // Remove the lines from bottom to top to maintain indices
@@ -833,13 +960,45 @@
                         this.board.unshift(Array(this.cols).fill(0));
                     }
 
-                    // Update game stats
-                    this.lines += completedLines.length;
+                    totalLinesCleared += completedLines.length;
+                    comboCount++;
+
+                    // Update combo and show indicator
+                    this.combo = comboCount;
+                    this.maxCombo = Math.max(this.maxCombo, this.combo);
+
+                    if (comboCount > 1) {
+                        this.showComboIndicator(comboCount);
+                    }
+
+                    // Apply gravity and animate falling blocks
+                    const blocksChangedPosition = this.applyGravity();
+                    if (blocksChangedPosition) {
+                        await this.animateGravity();
+                    }
+
+                    // Update display
+                    this.updateDisplay();
+
+                    // Small delay before checking for more lines
+                    await new Promise(resolve => setTimeout(resolve, 200));
+                }
+
+                // Calculate final score with combo bonus
+                if (totalLinesCleared > 0) {
+                    this.lines += totalLinesCleared;
                     this.level = Math.floor(this.lines / 10) + 1;
                     this.dropInterval = Math.max(50, 1000 - (this.level - 1) * 50);
 
-                    const lineScores = [0, 100, 300, 500, 800];
-                    this.score += lineScores[completedLines.length] * this.level;
+                    const baseScore = [0, 100, 300, 500, 800][Math.min(4, totalLinesCleared)];
+                    const comboBonus = comboCount > 1 ? (comboCount - 1) * 50 : 0;
+                    const finalScore = (baseScore + comboBonus) * this.level;
+
+                    this.score += finalScore;
+                    this.updateDisplay();
+                } else {
+                    // Reset combo if no lines were cleared
+                    this.combo = 0;
                     this.updateDisplay();
                 }
 
@@ -856,6 +1015,18 @@
 
                 // Reset drop timer for new piece
                 this.dropTime = Date.now();
+            }
+
+            showComboIndicator(comboCount) {
+                const indicator = document.getElementById('comboIndicator');
+                indicator.textContent = `COMBO x${comboCount}!`;
+                indicator.classList.remove('hide');
+                indicator.classList.add('show');
+
+                setTimeout(() => {
+                    indicator.classList.remove('show');
+                    indicator.classList.add('hide');
+                }, 1500);
             }
 
             animateLineClearing(completedLines) {
@@ -926,6 +1097,7 @@
                 document.getElementById('finalScore').textContent = this.score;
                 document.getElementById('finalLevel').textContent = this.level;
                 document.getElementById('finalLines').textContent = this.lines;
+                document.getElementById('finalCombo').textContent = this.maxCombo;
                 document.getElementById('gameOverScreen').style.display = 'flex';
             }
 
@@ -933,6 +1105,7 @@
                 document.getElementById('score').textContent = this.score;
                 document.getElementById('level').textContent = this.level;
                 document.getElementById('lines').textContent = this.lines;
+                document.getElementById('combo').textContent = this.combo;
             }
 
             draw() {
