--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
 			backdrop-filter: blur(20px);
 			border-radius: 24px 24px 0 0;
 			border-top: 1px solid rgba(255, 255, 255, 0.1);
+			margin-bottom: -50px;
 		}
 
 		.footer-text {
