--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,7 @@
 			<div class="mobile-hero">
 				<div class="mobile-hero-content">
 					<h1>Ready to Play?</h1>
-					<p>Discover amazing games built with AI. Instant play, no downloads required.</p>
+					<p>Discover amazing games built with AI.</p>
 					<div class="mobile-hero-stats">
 						<div class="mobile-stat">
 							<span class="mobile-stat-number" id="totalGameCount">0</span>
